Fix `a`, `i`, `title`, dark mode, and add prefetched pages

--- a/docs/assets/styles/root-colors.css
+++ b/docs/assets/styles/root-colors.css
@@ -1,5 +1,4 @@
-:root,
-:root:has(#mv-dark-toggle:not(:checked)) {
+:root {
   /* https://tailwindcss.com/docs/colors
    * https://tailscan.com/colors
    */
@@ -68,7 +67,10 @@
   --breakpoint-lg: 64rem;
   --breakpoint-xl: 80rem;
   --breakpoint-xxl: 96rem;
+}
 
+/* Light mode */
+:root {
   --foreground-rgb: var(--color-neutral-800);
   --background-start-rgb: var(--color-gray-100);
   --background-end-rgb: var(--color-gray-200);
@@ -89,22 +91,29 @@
   --bubble-bg-rgb: var(--color-gray-300);
 }
 
-:root:has(#mv-dark-toggle:checked) {
-  --topnav-toggle-hover-rgb: var(--color-neutral-300);
-  --link-color-rgb: var(--color-green-rgb);
-  --link-color-pale-rgb: var(--color-green-pale-rgb);
-  --foreground-rgb: var(--color-neutral-200);
-  --background-start-rgb: 17, 34, 64;
-  --background-end-rgb: var(--color-slate-900);
-
-  --text-h2-rgb: var(--color-slate-400);
-  --text-prose-rgb: 175, 188, 204;
-  --text-lead-rgb: var(--color-gray-400);
-
-  --home-img-border-rgb: var(--color-blue-100);
-  --home-text-stats-rgb: var(--color-slate-400);
-  --hr-rgb: var(--color-slate-700);
-  --default-slate-rgb: var(--color-slate-300);
-  --career-timeline-bar-rgb: var(--color-slate-600);
-  --bubble-bg-rgb: var(--color-slate-700);
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+  /* 
+    The double negative may seem counterintuitive, but I want the styles
+    to apply whether or not the dark toggle component has rendered.
+  */
+  :root:not(:has(#mv-dark-toggle:not(:checked))) {
+    --topnav-toggle-hover-rgb: var(--color-neutral-300);
+    --link-color-rgb: var(--color-green-rgb);
+    --link-color-pale-rgb: var(--color-green-pale-rgb);
+    --foreground-rgb: var(--color-neutral-200);
+    --background-start-rgb: 17, 34, 64;
+    --background-end-rgb: var(--color-slate-900);
+  
+    --text-h2-rgb: var(--color-slate-400);
+    --text-prose-rgb: 175, 188, 204;
+    --text-lead-rgb: var(--color-gray-400);
+  
+    --home-img-border-rgb: var(--color-blue-100);
+    --home-text-stats-rgb: var(--color-slate-400);
+    --hr-rgb: var(--color-slate-700);
+    --default-slate-rgb: var(--color-slate-300);
+    --career-timeline-bar-rgb: var(--color-slate-600);
+    --bubble-bg-rgb: var(--color-slate-700);
+  }
 }
